# purexml

./: .gitignore  .golangci.yml  .review-canonical  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  CONTRIBUTING.md  CONVENTIONS.md  HISTORY.md  LICENSE  LIMITATIONS.md  PUBLIC_CONTRACT.md  README.md  SECURITY.md  STACK.md  USE.md  corpus_manifest.json  justfile  new-project.sh  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml  tests-go.yml  tests-python.yml  tests.yml
cmd/app/: main.go
docs/: COMPLIANCE-v0.1.md  COMPLIANCE-v0.10.md  COMPLIANCE-v0.11.md  COMPLIANCE-v0.12.md  COMPLIANCE-v0.13.md  COMPLIANCE-v0.14.md  COMPLIANCE-v0.2.md  COMPLIANCE-v0.3.md  COMPLIANCE-v0.4.md  COMPLIANCE-v0.5.md  COMPLIANCE-v0.6.md  COMPLIANCE-v0.7.md  COMPLIANCE-v0.8.md  COMPLIANCE-v0.9.md  COMPLIANCE-v1.0.md  EQUIVALENCE.md  FO_REQUIRED_COMPATIBILITY.md  MIGRATING.md  PUBLIC_README_DRAFT.md  ROADMAP-to-1.0.md  TARGET_SPECIFICATION.md  blueprint-kb-manifest.txt  v0.1.0_RFC_Specification.md  v0.10.0_RFC_Specification.md  v0.11.0_RFC_Specification.md  v0.12.0_RFC_Specification.md  v0.13.0_RFC_Specification.md  v0.14.0_RFC_Specification.md  v0.2.0_RFC_Specification.md  v0.3.0_RFC_Specification.md  v0.4.0_RFC_Specification.md  v0.5.0_RFC_Specification.md  v0.6.0_RFC_Specification.md  v0.7.0_RFC_Specification.md  v0.8.0_RFC_Specification.md  v0.9.0_RFC_Specification.md  v1.0.0_RFC_Specification.md  v1.0_TARGET.md  vs-defusedxml.md
examples/: 01_hardened_parse.py  02_migrate_from_defusedxml.py  03_elementtree_family.py  04_minidom.py  05_sax.py  06_xmlrpc.py  07_limits.py  08_security_posture.py  README.md
fuzz/: README.md  fuzz_equivalence.py
internal/: README.md
src/example/: __init__.py
src/purexml/: ElementTree.py  __init__.py  __main__.py  _expat_security.py  _parser.py  common.py  errors.py  expatreader.py  limits.py  minidom.py  sax.py  xmlrpc.py
tests/: __init__.py  conftest.py  test_attacks.py  test_durability.py  test_equivalence.py  test_examples.py  test_expat_security.py  test_fo_contract.py  test_fuzz_equivalence.py  test_hardening_soak.py  test_misc.py  test_no_io.py  test_public_contract.py  test_smoke.py  test_v02_surface.py  test_v03_iterparse.py  test_v04_limits.py  test_v05_security_report.py  test_v07_cli.py  test_v10_minidom.py  test_v12_sax.py  test_v13_xmlrpc.py  test_v14_limits_breadth.py
tools/: check_expat_currency.py
