[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purexml"
version = "0.5.0"
description = "Safely parse untrusted XML using only the Python standard library — a zero-dependency defusedxml replacement."
readme = "README.md"
requires-python = ">=3.10"
# License UNDECIDED — tied to the open adoption model (vendor vs first-party dep);
# see README.md "License" and scratch/packaging_and_naming_notes.md. Do not publish
# before this is set with Russell.
license = {text = "TODO"}
authors = [
    {name = "Russell Pfister", email = "russalo@gmail.com"},
]
keywords = ["xml", "security", "defusedxml", "xxe", "billion-laughs", "stdlib", "hardening"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Text Processing :: Markup :: XML",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# Start empty. Add real runtime deps as the project grows; prefer stdlib first.
dependencies = []

[project.optional-dependencies]
# defusedxml is the dev/test ORACLE only (RFC §3/§5) — never a runtime dependency,
# never imported under src/. It is the incumbent purexml is validated against.
dev = ["pytest", "defusedxml"]

# Coverage-guided differential fuzzing (v0.5 RFC §3/§4). DEV-ONLY, opt-in — Atheris
# is heavier tooling (libFuzzer/clang) for on-demand deep sweeps; the always-run
# seeded differential gate (tests/test_fuzz_equivalence.py) needs NO extra. Atheris
# is NEVER a runtime dependency and is never imported under src/.
fuzz = ["atheris", "defusedxml"]

# URLs PROVISIONAL — repo home not confirmed (adoption model open; may be vendored
# rather than published). russalo convention path shown; revisit when publishing is decided.
[project.urls]
Homepage = "https://github.com/russalo/purexml"
Repository = "https://github.com/russalo/purexml"
Issues = "https://github.com/russalo/purexml/issues"

# If/when this project ships a CLI, declare it here:
# [project.scripts]
# purexml = "purexml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Only collect the project's own tests. Prevents `pytest` from walking the repo
# root and importing test files inside scratch/ or any harvested corpora — that
# both errors on collection AND writes __pycache__/*.pyc into shared dirs.
testpaths = ["tests"]
pythonpath = ["src"]
