[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purexml"
version = "0.14.1"
description = "Safely parse untrusted XML using only the Python standard library — a zero-dependency defusedxml replacement."
readme = "README.md"
requires-python = ">=3.10"
# MIT (decided 2026-06-28) — pure open source, maximum reuse; one-way compatible with
# AGPL so it's clean as a future file-observer dependency. See LICENSE. Table form
# (`{text="MIT"}`) + classifier is used rather than the bare SPDX `license = "MIT"`
# string: the string form needs setuptools>=77 and (per PEP 639) deprecates the license
# classifier — this form keeps the classifier (which PyPI's UI surfaces) with no warning
# on the current setuptools>=65 floor.
license = {text = "MIT"}
authors = [
    {name = "Russell Pfister", email = "russalo@gmail.com"},
]
keywords = ["xml", "security", "defusedxml", "xxe", "billion-laughs", "stdlib", "hardening"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Text Processing :: Markup :: XML",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# Start empty. Add real runtime deps as the project grows; prefer stdlib first.
dependencies = []

[project.optional-dependencies]
# defusedxml is the dev/test ORACLE only (RFC §3/§5) — never a runtime dependency,
# never imported under src/. It is the incumbent purexml is validated against.
# ruff (lint) + pytest-cov (coverage gate) are dev-only quality tooling, run in CI;
# never runtime deps. (mypy is intentionally NOT here yet — see the typed-badge note
# in scratch/publish_prep_checklist.md: the surface needs annotating first.)
dev = ["pytest", "defusedxml", "ruff", "pytest-cov", "mypy"]

# Coverage-guided differential fuzzing (v0.5 RFC §3/§4). DEV-ONLY, opt-in — Atheris
# is heavier tooling (libFuzzer/clang) for on-demand deep sweeps; the always-run
# seeded differential gate (tests/test_fuzz_equivalence.py) needs NO extra. Atheris
# is NEVER a runtime dependency and is never imported under src/.
fuzz = ["atheris", "defusedxml"]

# URLs PROVISIONAL — repo home not confirmed (adoption model open; may be vendored
# rather than published). russalo convention path shown; revisit when publishing is decided.
[project.urls]
Homepage = "https://github.com/russalo/purexml"
Repository = "https://github.com/russalo/purexml"
Issues = "https://github.com/russalo/purexml/issues"

# If/when this project ships a CLI, declare it here:
# [project.scripts]
# purexml = "purexml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# Ship the PEP 561 marker so downstream type-checkers consume purexml's types (v0.8).
[tool.setuptools.package-data]
purexml = ["py.typed"]

[tool.pytest.ini_options]
# Only collect the project's own tests. Prevents `pytest` from walking the repo
# root and importing test files inside scratch/ or any harvested corpora — that
# both errors on collection AND writes __pycache__/*.pyc into shared dirs.
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.coverage.run]
source = ["purexml"]
# CI runs: pytest --cov=purexml --cov-fail-under=90 (enforced floor; currently ~94%).

[tool.mypy]
files = ["src/purexml"]
python_version = "3.10"
strict = true       # v0.8.1: full strict — internals annotated, Any leaks resolved.
